2014-12-29  Patrice Dumas  <pertusus@free.fr>

	* tp/texi2any.pl: force conversion of stringyfied object
	passed by Getopt::Long to a true string.
	* tp/Texinfo/Parser.pm (parser): use Storable::dclone instead
	of evaluating Data::Dumper->Dump result to make a deep copy.

2014-12-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c, info/nodes.c (convert_eols): Function moved 
	between files.  Arguments changed.
	* info/nodes.c (adjust_nodestart): Take extra argument giving 
	the slack to search for a node.
	(find_node_from_tag): New function, wrapping adjust_nodestart.  
	Call convert_eols on file if we don't find a node.
	(info_node_of_tag): Call find_node_from_tag instead of 
	adjust_nodestart.  Rearrange logic in function so not to call 
	itself when handling an anchor.
	* info/nodes.h (N_EOLs_Converted): New flag.

2014-12-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (TAGS_TABLE_BEG_LABEL): Define without trailing 
	'\n'.
	(INDIRECT_TAGS_TABLE_LABEL, INDIRECT_TABLE_LABEL): Rename and 
	remove trailing '\n'.
	(TAGS_TABLE_END_LABEL): Define without leading '\n'.

	* info/search.c (find_node_separator): Search backwards if 
	beginning of search is after end of search.
	(find_tags_table, find_file_section): Function renamed.  Take 
	extra argument giving first line of section to look for.  Search 
	backwards if beginning of search is after the end of search.
	* info/search.c (looking_at_line): New function.

	* info/nodes.c (build_tags_and_nodes): Call find_file_section to 
	find end and start of tags table.
	(get_nodes_of_tags_table): Assume we are passed the exact offset 
	of the separator preceding the tag table.

	* info/info.h (whitespace_or_newline): Include '\r'.
	* info/nodes.c (get_file_character_encoding): Stop reading name 
	of character encoding at an '\r' if one is seen.
	* info/info-utils.c (avoid_see_see): Include '\r' as a 
	whitespace character.

	All problems with reading files with CR-LF line endings reported 