@@ -4,6 +4,10 @@
 	passed by Getopt::Long to a true string.
 	* tp/Texinfo/Parser.pm (parser): use Storable::dclone instead
 	of evaluating Data::Dumper->Dump result to make a deep copy.
+	* tp/Texinfo/Parser.pm (simple_parser), tp/Texinfo/Report.pm (gdt):
+	new parser initialisation function, simple_parser, fit for 
+	strings of Texinfo, not whole documents, targetting speed.  
+	Use it in gdt() to try to speed up this function.
 
 2014-12-29  Gavin Smith  <gavinsmith0123@gmail.com>
 
